--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@
 ###
 
 cmake_minimum_required(VERSION 2.6.2)
-project(logos-monthly)
+project(logos-wallpaper)
 
 #################################################
 # Configuration
