--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@
 cmake_minimum_required(VERSION 2.6.2)
 project(logos-wallpaper)
 set(APP_LONGNAME "Logos Wallpaper Updater")
+set(APP_VERSION "1.1.1")
 
 #################################################
 # Configuration
